--- a/containerA/Dockerfile
+++ b/containerA/Dockerfile
@@ -2,16 +2,14 @@ ARG PYTHON_VERSION=3.8.1-slim
 
 FROM python:${PYTHON_VERSION} as build
 
-RUN python3 -m venv /opt/venv
+RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
 
+COPY requirements.txt /etc
+
+RUN pip install -r /etc/requirements.txt 
+
 WORKDIR /app
-
-COPY requirements.txt /app
-
-RUN pip3 install -r requirements.txt 
-
-
 COPY . /app
 
 
